# TaskHub

./: .eslintrc.cjs  .gitignore  .prettierrc.json  Note.txt  README.md  index.html  jsconfig.json  package-lock.json  package.json  postcss.config.js  random.txt  tailwind.config.js  todoData.txt  vite.config.js  vite.config.js.timestamp-1685612666714-98656b201207e.mjs
HTML  Template/: index.html  package-lock.json  package.json
HTML  Template/Pages/: about.html
HTML Templates/: package.json  pnpm-lock.yaml
src/: App.jsx  Test.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/Redux/: store.jsx
src/apiSlice/: apiSlice.jsx
src/components/: Btn_Primary.jsx  DatePicker.jsx  FormInputForOTP.jsx  ImgLoader.jsx  Input.jsx  LogInOutAndSingInAndUpContainer.jsx  LogInOutAndSingInAndUp_temp.jsx  ParticipantsManage.jsx  SingParticipant.jsx  Tooltip.jsx
src/context/: authContext.jsx
src/data/: DevelopersOfTodoProject.jsx  DevelopersOfWD_Hive.jsx  NavItems.jsx  wdHiveContactInfo.jsx
src/hooks/: useAuth.jsx  useLocalStorage.jsx
src/layout/: Error.jsx  Loading.jsx  NextLoader.jsx  NotFound.jsx  PrivetRoues.jsx  PublicRoute.jsx  Root.jsx  WindowNav.jsx  nextLoader.module.css
src/lib/: RouteTypes.jsx  usetJWT_Handler.jsx
src/style/: button.css  formStyles.css  styles.css
src/utils/: CountParticipants.jsx  EncodeDate.jsx  RouteTypes.jsx  convertDateFormat.jsx  formateDate.jsx  handleLocalStorage.jsx  localStorageActions.jsx  logOut.jsx  userStorageInfo.jsx
templates/: package.json  tailwind.config.js
templates/app/: layout.tsx  loading.jsx  (+1 more)
(+151 files in other folders)
