[package]
name = "taskhub"
version = "0.0.1"
description = "TaskMaster simplifies task management by offering a comprehensive set of features tailored to meet the needs of individuals and teams. Users can effortlessly create, organize, prioritize, and track their tasks, ensuring nothing falls through the cracks. The application offers an intuitive user interface that allows for seamless navigation and efficient task management"
authors = ["Md Kawsar Islam Yeasin"]
license = ""
repository = "https://github.com/Mdkawsarislam2002/TaskHub"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
